--- a/application/index/view/index/damage.html
+++ b/application/index/view/index/damage.html
@@ -21,7 +21,7 @@
         <div class="layui-form-mid layui-word-aux">{$case.employee_name}</div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">定损员</label>
+        <label class="layui-form-label">定损金额</label>
         <div class="layui-input-block">
             <input type="number" name="amount" required  lay-verify="required" placeholder="请输入定损金额" autocomplete="off" class="layui-input">
         </div>
