--- a/application/index/view/layout.html
+++ b/application/index/view/layout.html
@@ -25,16 +25,16 @@
             <!--</li>-->
         <!--</ul>-->
         <ul class="layui-nav layui-layout-right">
-            <!--<li class="layui-nav-item">-->
-                <!--<a href="javascript:;">-->
+            <li class="layui-nav-item">
+                <a href="javascript:;">
                     <!--<img src="http://t.cn/RCzsdCq" class="layui-nav-img">-->
-                    <!--贤心-->
-                <!--</a>-->
+                    欢迎登录 {$_COOKIE['name']}
+                </a>
                 <!--<dl class="layui-nav-child">-->
                     <!--<dd><a href="">基本资料</a></dd>-->
                     <!--<dd><a href="">安全设置</a></dd>-->
                 <!--</dl>-->
-            <!--</li>-->
+            </li>
             <li class="layui-nav-item"><a href="{:url('login/out')}">退出</a></li>
         </ul>
     </div>
@@ -60,10 +60,14 @@
                         <!--<dd><a href="">超链接</a></dd>-->
                     <!--</dl>-->
                 <!--</li>-->
+                {if condition="$_COOKIE['grade']" value="1"}
+                <li class="layui-nav-item {eq name='$Request.controller' value='Add'}layui-this{/eq}"><a href="{:url('Add/index')}">保险报案</a></li>
+                {else /}
                 <li class="layui-nav-item {eq name='$Request.controller' value='Index'}layui-this{/eq}"><a href="{:url('index/index')}">案件列表</a></li>
-                <li class="layui-nav-item {eq name='$Request.controller' value='Service'}layui-this{/eq}""><a href="{:url('service/index')}">业务管理</a></li>
-                <li class="layui-nav-item {eq name='$Request.controller' value='Later'}layui-this{/eq}""><a href="{:url('later/index')}">已结案</a></li>
-                <li class="layui-nav-item {eq name='$Request.controller' value='Add'}layui-this{/eq}""><a href="{:url('Add/index')}">保险报案</a></li>
+                <li class="layui-nav-item {eq name='$Request.controller' value='Service'}layui-this{/eq}"><a href="{:url('service/index')}">业务管理</a></li>
+                <li class="layui-nav-item {eq name='$Request.controller' value='Later'}layui-this{/eq}"><a href="{:url('later/index')}">已结案</a></li>
+                {/if}
+
             </ul>
         </div>
     </div>
