--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -21,34 +21,39 @@
     background: url("../images/login_bg.jpg") no-repeat 100% 100%;
     position: relative;
 }
-.login-box{
+.login .layui-tab{
+    margin: 0;
     position: absolute;
-    width: 400px;
-    height: 350px;
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, .4);
-    top: 200px;
-    right: 200px;
+    width: 300px;
+    height: 300px;
+    background-color: #FFF;
+    right: 400px;
+    top: 300px;
+    border: none;
+}
+.login .layui-tab-title{
+    background-color: transparent;
+}
+.login .layui-tab-title li{
+    width: 50%;
+    margin: 0;
     box-sizing: border-box;
-    padding: 30px;
+    color: #FFF;
+    background-color: rgba(0,0,0,.7);
+    font-size: 18px;
 }
-.login-heading{
-    font-size: 20px;
-    text-align: center;
-    color: #FFFFFF;
+.login .layui-tab-card>.layui-tab-title .layui-this{
+    color: #000;
 }
-.login-box form{
-    padding: 30px;
+.login .layui-input-inline{
+    width: 100%;
+    margin-bottom: 20px;
 }
-.login-box input{
-    padding: 25px 10px;
-    background-color: rgba(0, 0, 0, .7);
-    color: #FFFFFF;
+.login .layui-tab-item{
+    padding: 20px;
 }
-.login-box .form-group{
-    margin-bottom: 30px;
-}
-.login-box .btn{
+.login .layui-btn{
+    width: 100%;
     font-size: 18px;
 }
 .layui-form{
