修改普通用户

--- a/application/index/view/add/index.html
+++ b/application/index/view/add/index.html
@@ -1,32 +1,49 @@
 <form class="layui-form" action="{:url('add:add')}">
     <div class="layui-form-item">
-        <label class="layui-form-label">车主姓名</label>
-        <div class="layui-input-inline">
-            <input type="text" name="owner" required  lay-verify="required" placeholder="请输入车主姓名" autocomplete="off" class="layui-input">
+        <label class="layui-form-label">姓名</label>
+        <div class="layui-input-block">
+            <input type="text" name="owner" value="{$_COOKIE['name']}" required  lay-verify="required" placeholder="请输入姓名" autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">保单号</label>
-        <div class="layui-input-inline">
-            <input type="text" name="order_num" required lay-verify="required" placeholder="请输入保单号" autocomplete="off" class="layui-input">
+        <div class="layui-input-block">
+            <select name="order_num" lay-verify="required" lay-filter="Case_Select_Order">
+                <option value=""></option>
+                {foreach name="order" item="i"}
+                    <option value="{$i.id}" data-cate="{$i.order_cate_name}" data-item="{$i.order_item_name}">{$i.order_num}</option>
+                {/foreach}
+            </select>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">保险类型</label>
+        <div class="layui-input-block">
+            <input type="text" name="order_cate" id="Case_Order_Cate" required  lay-verify="required" placeholder="保险类型" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">保险项目</label>
+        <div class="layui-input-block">
+            <input type="text" name="order_item" id="Case_Order_Item" required  lay-verify="required" placeholder="保险项目" autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">时间</label>
-        <div class="layui-inline"> <!-- 注意：这一层元素并不是必须的 -->
+        <div class="layui-input-block">
             <input type="text" name="time" class="layui-input" placeholder="请选择日期时间" id="test1">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">地址</label>
-        <div class="layui-input-inline">
+        <div class="layui-input-block">
             <input type="text" name="place" required lay-verify="required" placeholder="请输入地址" autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
-            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            <a href="{:url('')}" class="layui-btn layui-btn-primary">取消</a>
         </div>
     </div>
 </form>
