--- a/application/index/view/order/add.html
+++ b/application/index/view/order/add.html
@@ -6,6 +6,12 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">手机</label>
+        <div class="layui-input-block">
+            <input type="text" name="user_phone" required  lay-verify="required" placeholder="请输入手机" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">保险类型</label>
         <div class="layui-input-block">
             <select name="order_cate" lay-verify="required" lay-filter="Order_Select">
