--- a/application/index/view/index/damage.html
+++ b/application/index/view/index/damage.html
@@ -30,7 +30,7 @@
     <div class="layui-form-item">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
-            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            <a href="{:url('index/index')}" type="reset" class="layui-btn layui-btn-primary">取消</a>
         </div>
     </div>
 </form>
