--- a/application/index/view/order/index.html
+++ b/application/index/view/order/index.html
@@ -9,6 +9,7 @@
     <tr>
         <th>id</th>
         <th>受保人</th>
+        <th>手机号</th>
         <th>保单号</th>
         <th>保险类型</th>
         <th>保险项目</th>
@@ -21,6 +22,7 @@
     <tr>
         <th>{$i.id}</th>
         <th>{$i.user_name}</th>
+        <th>{$i.user_phone}</th>
         <th>{$i.order_num}</th>
         <th>{$i.order_cate_name}</th>
         <th>{$i.order_item_name}</th>
