--- a/application/index/view/layout.html
+++ b/application/index/view/layout.html
@@ -91,6 +91,9 @@
     layui.use('element', function(){
         var element = layui.element;
     });
+    $('#Li_An').click(function (e) {
+        layer.msg('等待预付之后即可立案');
+    })
     layui.use('laydate', function(){
         var laydate = layui.laydate;
 
