--- a/application/index/view/service/close.html
+++ b/application/index/view/service/close.html
@@ -25,6 +25,18 @@
         <div class="layui-form-mid layui-word-aux">{$case.amount}</div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">保险类型</label>
+        <div class="layui-form-mid layui-word-aux">{$case.order_cate}</div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">保险项目</label>
+        <div class="layui-form-mid layui-word-aux">{$case.order_item}</div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">保险项目</label>
+        <div class="layui-form-mid layui-word-aux">{$case.intro}</div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">状态</label>
         <div class="layui-form-mid layui-word-aux">待结案</div>
     </div>
@@ -33,7 +45,7 @@
     <div class="layui-form-item">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit lay-filter="formDemo">结案</button>
-            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            <a href="{:url('service/index')}" class="layui-btn layui-btn-primary">取消</a>
         </div>
     </div>
 </form>
