--- a/application/index/view/service/index.html
+++ b/application/index/view/service/index.html
@@ -39,7 +39,7 @@
         <td>
             {switch name="i.state" }
             {case value="3"}
-            <a href="{:url('service/check', ['case_id' => $i.id])}" class="layui-btn layui-btn-primary">预付</a>
+            <a href="javascript:;" class="layui-btn layui-btn-primary">等待预付</a>
             {/case}
             {case value="4"}
             <a href="{:url('service/confirm', ['case_id' => $i.id])}" class="layui-btn layui-btn-primary">核赔</a>
