--- a/application/index/view/service/check.html
+++ b/application/index/view/service/check.html
@@ -1,6 +1,6 @@
 <form class="layui-form" action="">
     <div class="layui-form-item">
-        <label class="layui-form-label">车主</label>
+        <label class="layui-form-label">姓名</label>
         <div class="layui-form-mid layui-word-aux">{$case.owner}</div>
     </div>
     <div class="layui-form-item">
