--- a/task/views/index.jade
+++ b/task/views/index.jade
@@ -10,3 +10,4 @@ block content
                     a.delete(href="/project/#{project.id}") X
         form(action="/projects", method="post")
             input(type="text" name="title")
+            button(type="submit") add
